--- a/BlueSimilarity.Test/BlueSimilarity.Test.csproj
+++ b/BlueSimilarity.Test/BlueSimilarity.Test.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Preprocessing\QGramSetTest.cs" />
     <Compile Include="Preprocessing\TokenTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimilarityHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlueSimilarity\BlueSimilarity.csproj">
