Improve containers and types implementation, increase unit test coverage

--- a/BlueSimilarity/BlueSimilarity.csproj
+++ b/BlueSimilarity/BlueSimilarity.csproj
@@ -76,7 +76,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Bigram.cs" />
+    <Compile Include="Types\IQgram.cs" />
     <Compile Include="Containers\ISetOperations.cs" />
+    <Compile Include="Types\Unigram.cs" />
+    <Compile Include="Types\Trigram.cs" />
     <Compile Include="Contracts\DistanceContract.cs" />
     <Compile Include="Contracts\SimilarityContract.cs" />
     <Compile Include="DamerauLevenshtein.cs" />
@@ -90,10 +94,10 @@
     <Compile Include="Levenshtein.cs" />
     <Compile Include="OverlapCoefficient.cs" />
     <Compile Include="Containers\IQGramSet.cs" />
-    <Compile Include="Containers\NormalizedString.cs" />
-    <Compile Include="Containers\QGram.cs" />
+    <Compile Include="Types\NormalizedString.cs" />
+    <Compile Include="Types\QGram.cs" />
     <Compile Include="Containers\QGramSet.cs" />
-    <Compile Include="Containers\Token.cs" />
+    <Compile Include="Types\Token.cs" />
     <Compile Include="Containers\TokenSet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
