--- a/BlueSimilarity.Test/BlueSimilarity.Test.csproj
+++ b/BlueSimilarity.Test/BlueSimilarity.Test.csproj
@@ -50,18 +50,23 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Types\BigramTest.cs" />
+    <Compile Include="Types\QGramTest.cs" />
+    <Compile Include="Types\TrigramTest.cs" />
+    <Compile Include="Types\UnigramTest.cs" />
     <Compile Include="DamerauLevenshteinTestcs.cs" />
     <Compile Include="DiceCoefficientTest.cs" />
+    <Compile Include="Helpers\EqualityTest.cs" />
     <Compile Include="JaccardCoefficientTest.cs" />
     <Compile Include="JaroTest.cs" />
     <Compile Include="JaroWinklerTest.cs" />
     <Compile Include="LevenshteinTest.cs" />
     <Compile Include="NormalizedStringTest.cs" />
     <Compile Include="OverlapCoefficientTest.cs" />
-    <Compile Include="Preprocessing\QGramSetTest.cs" />
-    <Compile Include="Preprocessing\TokenTest.cs" />
+    <Compile Include="Containers\QGramSetTest.cs" />
+    <Compile Include="Types\TokenTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimilarityHelpers.cs" />
+    <Compile Include="Helpers\SimilarityHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlueSimilarity\BlueSimilarity.csproj">
@@ -69,6 +74,7 @@
       <Name>BlueSimilarity</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
