--- a/BlueSimilarity.Test/BlueSimilarity.Test.csproj
+++ b/BlueSimilarity.Test/BlueSimilarity.Test.csproj
@@ -74,7 +74,15 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentAssertions">
+      <HintPath>..\packages\FluentAssertions.3.2.1\lib\net45\FluentAssertions.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentAssertions.Core">
+      <HintPath>..\packages\FluentAssertions.3.2.1\lib\net45\FluentAssertions.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -89,13 +97,15 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BagOfTokensSimilarityTest.cs" />
+    <Compile Include="Containers\TokenizerTest.cs" />
     <Compile Include="Containers\TokenSetTest.cs" />
     <Compile Include="Types\BigramTest.cs" />
     <Compile Include="Types\TrigramTest.cs" />
     <Compile Include="Types\UnigramTest.cs" />
     <Compile Include="DamerauLevenshteinTestcs.cs" />
     <Compile Include="DiceCoefficientTest.cs" />
-    <Compile Include="Helpers\HelpersTest.cs" />
+    <Compile Include="Containers\Helpers\HelpersTest.cs" />
     <Compile Include="JaccardCoefficientTest.cs" />
     <Compile Include="JaroTest.cs" />
     <Compile Include="JaroWinklerTest.cs" />
@@ -105,7 +115,7 @@
     <Compile Include="Containers\QGramSetTest.cs" />
     <Compile Include="Types\TokenTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Helpers\SimilarityHelpers.cs" />
+    <Compile Include="Containers\Helpers\SimilarityHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlueSimilarity\BlueSimilarity.csproj">
@@ -113,7 +123,9 @@
       <Name>BlueSimilarity</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
