Add TFIDF, SoftTFIDF and SemanticBagOfWordsSimilarity

--- a/BlueSimilarity.Interop/BlueSimilarity.Interop.vcxproj
+++ b/BlueSimilarity.Interop/BlueSimilarity.Interop.vcxproj
@@ -170,7 +170,9 @@
     <ClInclude Include="MathDef.h" />
     <ClInclude Include="Overlap.h" />
     <ClInclude Include="SemanticBagOfTokensSim.h" />
+    <ClInclude Include="SimHelpers.h" />
     <ClInclude Include="SoftTFIDFNative.h" />
+    <ClInclude Include="TFIDFNative.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
