--- a/BlueSimilarity.Test/BlueSimilarity.Test.csproj
+++ b/BlueSimilarity.Test/BlueSimilarity.Test.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Containers\TokenSetTest.cs" />
     <Compile Include="Indexing\SemanticVocabularyTest.cs" />
     <Compile Include="SemanticBagOfWordsSimilarityTest.cs" />
+    <Compile Include="SoftTFIDFTest.cs" />
     <Compile Include="Types\BigramTest.cs" />
     <Compile Include="Types\TrigramTest.cs" />
     <Compile Include="Types\UnigramTest.cs" />
