--- a/BlueSimilarity/BlueSimilarity.csproj
+++ b/BlueSimilarity/BlueSimilarity.csproj
@@ -118,15 +118,17 @@
     <Compile Include="Containers\ITokenizer.cs" />
     <Compile Include="Containers\StandardTokenizer.cs" />
     <Compile Include="Containers\Tokenizer.cs" />
-    <Compile Include="BagOfTokensSimilarity.cs" />
-    <Compile Include="Contracts\BagOfTokenSimilarityContract.cs" />
-    <Compile Include="Definitions\IBagOfTokenSimilarity.cs" />
+    <Compile Include="BagOfWordsSimilarity.cs" />
+    <Compile Include="Contracts\BagOfWordsSimilarityContract.cs" />
+    <Compile Include="Definitions\IBagOfWordsSimilarity.cs" />
+    <Compile Include="Definitions\ISemantic.cs" />
     <Compile Include="Definitions\TokenSimilarity.cs" />
     <Compile Include="Indexing\BinarySerializer.cs" />
     <Compile Include="Indexing\DeflateCompressor.cs" />
     <Compile Include="Indexing\SemanticVocabulary.cs" />
     <Compile Include="SemanticBagOfWordsSimilarity.cs" />
     <Compile Include="SoftTFIDF.cs" />
+    <Compile Include="TFIDF.cs" />
     <Compile Include="Types\Bigram.cs" />
     <Compile Include="Types\IQgram.cs" />
     <Compile Include="Containers\ISetOperations.cs" />
