--- a/BlueSimilarity.Interop/BlueSimilarity.Interop.vcxproj.filters
+++ b/BlueSimilarity.Interop/BlueSimilarity.Interop.vcxproj.filters
@@ -62,5 +62,11 @@
     <ClInclude Include="SemanticBagOfTokensSim.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TFIDFNative.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SimHelpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
