Fix SimHelper, package references and update Boost library

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\BlueSimilarity.SpeedTest\packages.config" />
+  <repository path="..\BlueSimilarity.Test\packages.config" />
   <repository path="..\BlueSimilarity.UseCase\packages.config" />
 </repositories>
